--- a/tienda/empanadas/templates/empanadas/ingredients.html
+++ b/tienda/empanadas/templates/empanadas/ingredients.html
@@ -1,35 +1,9 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <title>les ingredients</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
-<body>
-    <header>
-        {% comment %} <nav>
-            <div><a href="/empanadas">les empanadas</a></div>
-            <div><a href="/ingredients">les ingredients</a></div>
-        </nav> {% endcomment %}
-        <ul class="nav">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/empanadas">les empanadas</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/ingredients">les ingrédients</a>
-            </li>
-        </ul>
-    </header>
-    <main>
-        <h2>Voici nos {{ingredients|length}} ingredients</h2>
-        <ul>
-            {%for ing in ingredients %}
-            <li>{{ing}}</li>
-            {% endfor   %}
-        </ul>
-    </main>
-    <footer>
-        &#127279; Tienda Django Criollo
-    </footer>
-</body>
-</html>
+{% extends 'empanadas/base.html' %} {% block title %}les ingredients{%endblock%}
+{% block main %}
+<h2>Voici nos {{ingredients|length}} ingredients</h2>
+<ul>
+    {% for ing in ingredients %}
+    <li>{{ing}}</li>
+    {% endfor %}
+</ul>
+{% endblock %}
