--- a/tienda/empanadas/templates/empanadas/base.html
+++ b/tienda/empanadas/templates/empanadas/base.html
@@ -11,6 +11,7 @@
             crossorigin="anonymous"
         />
         <link href="{% static 'empanadas/css/styles.css' %}" rel="stylesheet" />
+        <link href="{% static 'empanadas/img/empanadas.webp' %}" rel="icon" />
     </head>
     <body>
         <header>{% include 'empanadas/menu.html' %}</header>
