--- a/tienda/empanadas/templates/empanadas/menu.html
+++ b/tienda/empanadas/templates/empanadas/menu.html
@@ -1,5 +1,11 @@
+{% load static %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-success">
     <div class="container-fluid">
+        <img
+            src="{% static 'empanadas/img/empanadas.webp' %}"
+            height="50em"
+            width="50em"
+        />
         <a class="navbar-brand" href="#">Tienda de Empanadas</a>
         <button
             class="navbar-toggler"
@@ -12,7 +18,7 @@
         >
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div id="navbarTest" class="collapse navbar-collapse">
+        <div id="navbarText" class="collapse navbar-collapse">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link" href="/empanadas">les empanadas</a>
