--- a/tienda/empanadas/templates/empanadas/empanada.html
+++ b/tienda/empanadas/templates/empanadas/empanada.html
@@ -7,12 +7,18 @@
 
     <table class="table table-striped">
         <tbody>
-            {% for ingredient in ingredients %}
-            <tr>
-                <td>{{ ingredient.quantite }}</td>
-                <td>{{ ingredient.nomIngredient }}</td>
-            </tr>
-            {% endfor %}
+            {% if ingredients %}
+                {% for ingredient in ingredients %}
+                <tr>
+                    <td>{{ ingredient.quantite }}</td>
+                    <td>{{ ingredient.nomIngredient }}</td>
+                </tr>
+                {% endfor %}
+            {% else %}
+                <tr>
+                    <td colspan="2">Ingrédient non renseigné pour cet empanada.</td>
+                </tr>
+            {% endif %}
         </tbody>
     </table>
 {% endblock %}
