--- a/tienda/empanadas/templates/empanadas/menu.html
+++ b/tienda/empanadas/templates/empanadas/menu.html
@@ -1,12 +1,14 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-success">
     <div class="container-fluid">
-        <img
-            src="{% static 'empanadas/img/empanadas.webp' %}"
-            height="50em"
-            width="50em"
-        />
-        <a class="navbar-brand" href="#">Tienda de Empanadas</a>
+        <a class="navbar-brand" href="#"
+            ><img
+                src="{% static 'empanadas/img/empanadas.webp' %}"
+                height="50em"
+                width="50em"
+            />
+            Tienda de Empanadas</a
+        >
         <button
             class="navbar-toggler"
             type="button"
@@ -25,6 +27,16 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/ingredients">les ingrédients</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/ingredients/add"
+                        >créer un ingrédient</a
+                    >
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/empanadas/add"
+                        >créer un empanada</a
+                    >
                 </li>
             </ul>
         </div>
