--- a/tienda/empanadas/templates/empanadas/ingredients.html
+++ b/tienda/empanadas/templates/empanadas/ingredients.html
@@ -3,7 +3,10 @@
 <h2>Voici nos {{ingredients|length}} ingredients</h2>
 <ul>
     {% for ing in ingredients %}
-    <li>{{ing}}</li>
+    <li>{{ing}}
+        | <a href="/ingredients/{{ing.idIngredient}}/update">modifier</a>
+        | <a href="/ingredients/{{ing.idIngredient}}/delete">supprimer</a>
+    </li>
     {% endfor %}
 </ul>
 {% endblock %}
