--- a/tienda/empanadas/templates/empanadas/base.html
+++ b/tienda/empanadas/templates/empanadas/base.html
@@ -12,6 +12,11 @@
         />
         <link href="{% static 'empanadas/css/styles.css' %}" rel="stylesheet" />
         <link href="{% static 'empanadas/img/empanadas.webp' %}" rel="icon" />
+
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+        />
     </head>
     <body>
         <header>{% include 'empanadas/menu.html' %}</header>
