--- a/tienda/empanadas/templates/empanadas/formulaireModificationEmpanada.html
+++ b/tienda/empanadas/templates/empanadas/formulaireModificationEmpanada.html
@@ -1,8 +1,5 @@
-{% extends 'empanadas/base.html' %}
-
-{% block title %}modification d'une empanada{% endblock %}
-
-{% block main %}
+{% extends 'empanadas/base.html' %} {% block title %}modification d'une
+empanada{% endblock %} {% block main %}
 
 <h2>Modification d'une empanada</h2>
 <form action="/empanada/{{empanada.idEmpanada}}/updated/" method="post">
@@ -28,7 +25,7 @@
             type="number"
             value="{{empanada.prix}}"
             min="0.00"
-            max="100.00"
+            max="1000.00"
             step="0.01"
             maxlength="50"
             required
