--- a/tienda/empanadas/templates/empanadas/formulaireCreationEmpanada.html
+++ b/tienda/empanadas/templates/empanadas/formulaireCreationEmpanada.html
@@ -1,13 +1,14 @@
 {% extends 'empanadas/base.html' %}
 
-{% block title %}création d'une empanada{% endblock %}
+{% block title %} création d'une empanada {% endblock %}
 
 {% block main %}
 <h2>Création d'une empanada</h2>
-<form action="/empanadas/create/" method="post">
+<form action="/empanadas/create/" method="post" enctype="multipart/form-data">
     {% csrf_token %}
 
     <div class="m-3">
+        <!-- nom -->
         <label for="id_nomEmpanada" class="form-label"
             >Le nom de la empanada</label
         >
@@ -19,16 +20,30 @@
             required
             class="form-control"
         />
+    </div>
+    <div class="m-3">
+        <!-- prix -->
         <label for="id_prixEmpanada" class="form-label">Son prix</label>
         <input
             id="id_prixEmpanada"
             name="prix"
             type="number"
             min="0.00"
-            max="1000.00"
+            max="1000000.00"
             step="0.01"
             maxlength="50"
             required
+            class="form-control"
+        />
+    </div>
+    <div class="m-3">
+        <!-- image -->
+        <label for="id_image" class="form-label"> Image </label>
+        <input
+            id="id_image"
+            name="image"
+            type="file"
+            accept="image/*"
             class="form-control"
         />
     </div>
