--- a/tienda/empanadas/templates/empanadas/formulaireModificationEmpanada.html
+++ b/tienda/empanadas/templates/empanadas/formulaireModificationEmpanada.html
@@ -1,10 +1,18 @@
-{% extends 'empanadas/base.html' %} {% block title %}modification d'une
-empanada{% endblock %} {% block main %}
+{% extends 'empanadas/base.html' %}
+
+{% block title %}modification d'une empanada {% endblock %}
+
+{% block main %}
 
 <h2>Modification d'une empanada</h2>
-<form action="/empanada/{{empanada.idEmpanada}}/updated/" method="post">
+<form
+    action="/empanada/{{empanada.idEmpanada}}/updated/"
+    method="post"
+    enctype="multipart/form-data"
+>
     {% csrf_token %}
     <div class="m-3">
+        <!-- nom -->
         <label for="id_nomEmpanada" class="form-label">
             Le nom de la empanada
         </label>
@@ -17,18 +25,35 @@ empanada{% endblock %} {% block main %}
             required
             class="form-control"
         />
+    </div>
+    <div class="m-3">
+        <!-- prix -->
         <label for="id_prix" class="form-label"> Son prix </label>
         <input
-            <input
             id="id_prixEmpanada"
             name="prix"
             type="number"
             value="{{empanada.prix}}"
             min="0.00"
-            max="1000.00"
+            max="1000000.00"
             step="0.01"
             maxlength="50"
             required
+            class="form-control"
+        />
+    </div>
+    <div class="m-3">
+        <!-- image -->
+        <figure class="w-25 text-center m-auto">
+            <img src="{{MEDIA_URL}}{{empanada.image}}" class="img-fluid" />
+            <figcaption>image actuelle : {{empanada.image}}</figcaption>
+        </figure>
+        <label for="id_image" class="form-label"> Image </label>
+        <input
+            id="id_image"
+            name="image"
+            type="file"
+            accept="image/*"
             class="form-control"
         />
     </div>
