--- a/tienda/empanadas/templates/empanadas/base.html
+++ b/tienda/empanadas/templates/empanadas/base.html
@@ -19,7 +19,7 @@
         />
     </head>
     <body>
-        <header>{% include 'empanadas/menu.html' %}</header>
+        <header>{% include 'comptes/menu.html' %}</header>
         <main>{% block main %}{% endblock %}</main>
         <footer>{% include 'empanadas/footer.html' %}</footer>
         <script
