--- a/tienda/empanadas/templates/empanadas/base.html
+++ b/tienda/empanadas/templates/empanadas/base.html
@@ -28,7 +28,9 @@
             {% include 'comptes/menuNonConnecte.html' %}
             {% endif %}
         </header>
-        <main>{% block main %}{% endblock %}</main>
+        <main>
+            {% block main %}{% endblock %}
+        </main>
         <footer>{% include 'empanadas/footer.html' %}</footer>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
