--- a/tienda/empanadas/static/empanadas/css/styles.css
+++ b/tienda/empanadas/static/empanadas/css/styles.css
@@ -25,13 +25,17 @@ footer {
     max-width: 800px;
     margin: 0 auto;
     border-top: 1px solid black;
+    border-collapse: collapse; /* Ajout pour éviter les doubles bordures */
 }
-.table td {
-    width: 50%;
+
+.table td, .table th {
+    vertical-align: middle; /* Centrer verticalement le contenu des cellules */
+    padding: 10px; /* Ajouter un padding pour améliorer l'espacement */
+    border: 1px solid #ddd; /* Ajouter une bordure pour séparer les cellules */
 }
+
 .table td:last-child {
-    display: flex;
-    justify-content: flex-end;
+    text-align: right; /* Aligner le contenu à droite pour la dernière colonne */
 }
 
 .table a {
@@ -69,8 +73,10 @@ h2 {
 .img-fluid {
     margin: auto;
     display: flex;
+    width: 25rem;
+    padding: 0.5em;
 }
 
-footer{
+footer {
     background-color: #858585;
 }
