--- a/tienda/comptes/templates/comptes/menuClient.html
+++ b/tienda/comptes/templates/comptes/menuClient.html
@@ -28,6 +28,11 @@
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
+                    <span class="nav-link">Bienvenue, {{ user }} !
+                        <img src="{{MEDIA_URL}}{{user.image}}"  class="rounded-circle"/>
+                    </span>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/panier">panier</a>
                 </li>
                 <li class="nav-item">
