--- a/tienda/comptes/templates/comptes/menuStaff.html
+++ b/tienda/comptes/templates/comptes/menuStaff.html
@@ -41,6 +41,10 @@
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
+                    <span class="nav-link">Collègue {{user}}
+                        <img src="{{MEDIA_URL}}{{user.image}}"  class="rounded-circle"/>
+                    </span>
+                <li class="nav-item">
                     <a class="nav-link" href="/logout"> déconnexion </a>
                 </li>
             </ul>
