--- a/tienda/empanadas/static/empanadas/css/styles.css
+++ b/tienda/empanadas/static/empanadas/css/styles.css
@@ -80,3 +80,9 @@ h2 {
 footer {
     background-color: #858585;
 }
+
+.rounded-circle{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
