--- a/tienda/comptes/templates/comptes/menuClient.html
+++ b/tienda/comptes/templates/comptes/menuClient.html
@@ -33,6 +33,8 @@
                     </span>
                 </li>
                 <li class="nav-item">
+                    <a class ="nav-link" href="/user/update/" >profil</a>
+                <li class="nav-item">
                     <a class="nav-link" href="/panier">panier</a>
                 </li>
                 <li class="nav-item">
