--- a/tienda/empanadas/static/empanadas/css/styles.css
+++ b/tienda/empanadas/static/empanadas/css/styles.css
@@ -82,7 +82,7 @@ footer {
 }
 
 .rounded-circle{
-    width: 50px;
-    height: 50px;
+    width: 2em;
+    height: auto;
     border-radius: 50%;
 }
