modif profil TP13 finit

--- a/tienda/comptes/templates/comptes/profil.html
+++ b/tienda/comptes/templates/comptes/profil.html
@@ -1,6 +1,6 @@
 {% extends 'empanadas/base.html' %}
 
-{% block tile %}profil{% endblock %}
+{% block title %}Profil{% endblock %}
 
 {% block main %}
 <h2>Votre compte</h2>
