--- a/tienda/comptes/templates/comptes/login.html
+++ b/tienda/comptes/templates/comptes/login.html
@@ -28,7 +28,7 @@
 <div>
     <p>
         Pas encore inscit ?
-        <a href="/register">s'inscrire</a>
+        <a href="/register/">s'inscrire</a>
     </p>
     <p>
         Mot de passe oublié ?
