--- a/tienda/comptes/templates/comptes/profil.html
+++ b/tienda/comptes/templates/comptes/profil.html
@@ -41,7 +41,7 @@
 		<label for="id_email" class="form-label">email</label>
 		<input
 			id="id_email"
-			type="text"
+			type="email"
 			name="email"
 			class="form-control"
 			value="{{ user.email }}" />
